// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Table Mobile 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading="BCeID Info"
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        >
          BCeID Info
        </th>
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Blue Stripe 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading=""
  styling="blue-stripe"
>
  <table
    className="blue-stripe"
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Bold Names 1`] = `
<Table
  elements={
    Array [
      Object {
        "isNameBold": true,
        "name": "Key",
        "value": "Value",
      },
    ]
  }
  heading=""
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "isNameBold": true,
            "name": "Key",
            "value": "Value",
          }
        }
        key="Key"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            <b>
              Key
            </b>
          </td>
          <td>
            Value
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Bold Values 1`] = `
<Table
  elements={
    Array [
      Object {
        "isValueBold": true,
        "name": "Key",
        "value": "Value",
      },
    ]
  }
  heading=""
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Key",
            "value": "Value",
          }
        }
        key="Key"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Key
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <b>
              Value
            </b>
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Fees 1`] = `
<Table
  elements={
    Array [
      Object {
        "isValueBold": true,
        "name": "Some Fees:",
        "value": "$100.00",
      },
      Object {
        "isValueBold": true,
        "name": "Some More Fees:",
        "value": "$10.00",
      },
      Object {
        "isEmptyRow": true,
        "name": "",
        "value": "",
      },
      Object {
        "isValueBold": true,
        "name": "Total Fees:",
        "value": "$110.00",
      },
    ]
  }
  heading=""
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Some Fees:",
            "value": "$100.00",
          }
        }
        key="Some Fees:"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Some Fees:
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <b>
              $100.00
            </b>
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Some More Fees:",
            "value": "$10.00",
          }
        }
        key="Some More Fees:"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Some More Fees:
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <b>
              $10.00
            </b>
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "isEmptyRow": true,
            "name": "",
            "value": "",
          }
        }
        key=""
      >
        <tr
          className="empty-row"
          colSpan="2"
        >
          <td
            className=""
          />
          <td />
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "isValueBold": true,
            "name": "Total Fees:",
            "value": "$110.00",
          }
        }
        key="Total Fees:"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Total Fees:
          </td>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            <b>
              $110.00
            </b>
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table With Header 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading="BCeID Info"
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        >
          BCeID Info
        </th>
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;

exports[`Storyshots Table Without Header 1`] = `
<Table
  elements={
    Array [
      Object {
        "name": "BCeID",
        "value": "bobross42",
      },
      Object {
        "name": "Last Name",
        "value": "Ross",
      },
      Object {
        "name": "First Name",
        "value": "Bob",
      },
      Object {
        "name": "Email Address",
        "value": "bob.ross@example.com",
      },
    ]
  }
  heading=""
  styling=""
>
  <table
    className=""
  >
    <thead>
      <tr>
        <th
          colSpan="2"
        />
      </tr>
    </thead>
    <tbody>
      <TableElement
        element={
          Object {
            "name": "BCeID",
            "value": "bobross42",
          }
        }
        key="BCeID"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            BCeID
          </td>
          <td>
            bobross42
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Last Name",
            "value": "Ross",
          }
        }
        key="Last Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Last Name
          </td>
          <td>
            Ross
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "First Name",
            "value": "Bob",
          }
        }
        key="First Name"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            First Name
          </td>
          <td>
            Bob
          </td>
        </tr>
      </TableElement>
      <TableElement
        element={
          Object {
            "name": "Email Address",
            "value": "bob.ross@example.com",
          }
        }
        key="Email Address"
      >
        <tr
          className=""
          colSpan="2"
        >
          <td
            className=""
          >
            Email Address
          </td>
          <td>
            bob.ross@example.com
          </td>
        </tr>
      </TableElement>
    </tbody>
  </table>
</Table>
`;
